change pre to not wrap (fixes #1986); target pre only, (not code)

--- a/scss/_base_code.scss
+++ b/scss/_base_code.scss
@@ -20,7 +20,6 @@
     -moz-tab-size: 4;
     -o-tab-size: 4;
     tab-size: 4;
-    white-space: pre-wrap;
     word-spacing: normal;
     word-wrap: break-word;
     // sass-lint:enable no-vendor-prefixes property-sort-order
@@ -38,5 +37,6 @@
     padding: calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px) $sph-inner calc(#{map-get($nudges, nudge--p-ubuntumono)} - 1px);
     text-align: left;
     text-shadow: none;
+    white-space: pre;
   }
 }
